package com.mhm.action.visitor;

/**
 * 抽象访问者
 * @author MHm
 * @date 2020-4-20 18:16
 */
public interface Visitor {
    void visitor(Element element);

}
